--- a/emotion_detector.ipynb
+++ b/emotion_detector.ipynb
@@ -38,7 +38,7 @@
     "from keras.models import Model\n",
     "from keras.layers import Flatten, Dense \n",
     "\n",
-    "from keras.preprocessing.image import ImageDataGenerator, img_to_array, load_img"
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator, img_to_array, load_img"
    ]
   },
   {
@@ -470,7 +470,7 @@
    ],
    "source": [
     "# to visualize images in the training data generator\n",
-    "train_img, label = train_data.next()\n",
+    "train_img, label = next(train_data)\n",
     "\n",
     "# function when called will prot the images\n",
     "def PlotImages(img_arr, label):\n",
@@ -505,7 +505,7 @@
     "from keras.callbacks import ModelCheckpoint, EarlyStopping\n",
     "\n",
     "es = EarlyStopping(monitor='val_accuracy', min_delta=0.01, patience=5, verbose=1, mode='auto')\n",
-    "mc = ModelCheckpoint(filepath=\"best_model.h5\", monitor=\"val_accuracy\", verbose=1, save_best_only=True, mode='auto')\n",
+    "mc = ModelCheckpoint(filepath=\"best_model.keras\", monitor=\"val_accuracy\", verbose=1, save_best_only=True, mode='auto')\n",
     "\n",
     "call_back = [es,mc]"
    ]
@@ -606,7 +606,7 @@
    "source": [
     "# loading the best fit model\n",
     "from keras.models import load_model\n",
-    "model = load_model(\"./best_model.h5\")"
+    "model = load_model(\"./best_model.keras\")"
    ]
   },
   {
